# dice-dsl

./: .gitignore  Cargo.toml  Gemfile  LICENSE.txt  README.md  dice-dsl.gemspec  example.txt
docs/: parser-notes.txt
exe/: roll
lib/: dice.rb
lib/dice/: dsl.rb  explode_each_roll.rb  exploding_roll.rb  has_values.rb  histogram.rb  list_of_rolls.rb  modified_roll.rb  modify_each_roll.rb  parser.rb  result.rb  roll.rb  roll_list.rb  simple_roll.rb  take_n.rb  target_number_roll.rb  token.rb  tokenizer.rb  vector_roll.rb  version.rb
lib/dice/dsl/: version.rb
lib/dice/parser/: scanner.rb  token.rb  tokenizer.rb
spec/: spec_helper.rb
spec/dice/: dsl_spec.rb  explode_each_roll_spec.rb  exploding_roll_spec.rb  histogram_spec.rb  list_of_rolls_spec.rb  modified_roll_spec.rb  modify_each_roll_spec.rb  result_spec.rb  roll_spec.rb  simple_roll_spec.rb  take_n_spec.rb  target_number_roll_spec.rb  tokenizer_spec.rb  vector_roll_spec.rb  version_spec.rb
spec/dice/parser/: tokenizer_spec.rb
src/: generator.rs  lib.rs  main.rs  ops.rs  result.rs  tokenizer.rs
