[package]
name = "dice-dsl"
version = "0.2.0"
authors = ["Galen Palmer <palmergs@gmail.com>"]
edition = "2018"

[[bin]]
name = "roll"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
clap = "*"
nom = "*"
